<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.scorekeeper.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/end"
            style="@style/padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/end_number" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/end"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <Button
                style="@style/buttons"
                android:onClick="decrement"
                android:text="@string/decrement" />

            <TextView
                android:id="@+id/end_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1" />

            <Button
                style="@style/buttons"
                android:onClick="increment"
                android:text="@string/increment" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/score_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/padding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/teama" />

                <TextView
                    android:id="@+id/team_a_score"
                    style="@style/padding1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/scorea" />

                <GridLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:columnCount="4"
                    android:orientation="horizontal">

                    <Button
                        style="@style/buttons"
                        android:onClick="plusOneA"
                        android:text="@string/one" />

                    <Button
                        style="@style/buttons"
                        android:onClick="plusTwoA"
                        android:text="@string/two" />

                    <Button
                        style="@style/buttons"
                        android:onClick="plusThreeA"
                        android:text="@string/three" />

                    <Button
                        style="@style/buttons"
                        android:onClick="plusFourA"
                        android:text="@string/four" />

                    <Button
                        style="@style/buttons"
                        android:onClick="plusFiveA"
                        android:text="@string/five" />

                    <Button
                        style="@style/buttons"
                        android:onClick="plusSixA"
                        android:text="@string/six" />

                    <Button
                        style="@style/buttons"
                        android:onClick="plusSevenA"
                        android:text="@string/seven" />

                    <Button
                        style="@style/buttons"
                        android:onClick="plusEightA"
                        android:text="@string/eight" />
                </GridLayout>

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/padding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/teamb" />

                <TextView
                    android:id="@+id/team_b_score"
                    style="@style/padding1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/scoreb" />

                <GridLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:columnCount="4"
                    android:orientation="horizontal">

                    <Button
                        style="@style/buttons"
                        android:onClick="plusOneB"
                        android:text="@string/one" />

                    <Button
                        style="@style/buttons"
                        android:onClick="plusTwoB"
                        android:text="@string/two" />

                    <Button
                        style="@style/buttons"
                        android:onClick="plusThreeB"
                        android:text="@string/three" />

                    <Button
                        style="@style/buttons"
                        android:onClick="plusFourB"
                        android:text="@string/four" />

                    <Button
                        style="@style/buttons"
                        android:onClick="plusFiveB"
                        android:text="@string/five" />

                    <Button
                        style="@style/buttons"
                        android:onClick="plusSixB"
                        android:text="@string/six" />

                    <Button
                        style="@style/buttons"
                        android:onClick="plusSevenB"
                        android:text="@string/seven" />

                    <Button
                        style="@style/buttons"
                        android:onClick="plusEightB"
                        android:text="@string/eight" />
                </GridLayout>
            </LinearLayout>
        </LinearLayout>

        <GridLayout
            style="@style/margin2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/score_count"
            android:layout_gravity="center"
            android:columnCount="12"
            android:orientation="horizontal">

            <TextView
                style="@style/table"
                android:text="@string/end" />

            <TextView
                style="@style/table"
                android:text="@string/column1" />

            <TextView
                style="@style/table"
                android:text="@string/column2" />

            <TextView
                style="@style/table"
                android:text="@string/column3" />

            <TextView
                style="@style/table"
                android:text="@string/column4" />

            <TextView
                style="@style/table"
                android:text="@string/column5" />

            <TextView
                style="@style/table"
                android:text="@string/column6" />

            <TextView
                style="@style/table"
                android:text="@string/column7" />

            <TextView
                style="@style/table"
                android:text="@string/column8" />

            <TextView
                style="@style/table"
                android:text="@string/column9" />

            <TextView
                style="@style/table"
                android:text="@string/column10" />

            <TextView
                style="@style/table"
                android:text="@string/total" />

            <TextView
                style="@style/table"
                android:text="@string/teama" />

            <TextView
                android:id="@+id/scorea"
                style="@style/table"
                android:text="@string/scorea" />

            <TextView
                style="@style/table"
                android:text="@string/scorea" />

            <TextView
                style="@style/table"
                android:text="@string/scorea" />

            <TextView
                style="@style/table"
                android:text="@string/scorea" />

            <TextView
                style="@style/table"
                android:text="@string/scorea" />

            <TextView
                style="@style/table"
                android:text="@string/scorea" />

            <TextView
                style="@style/table"
                android:text="@string/scorea" />

            <TextView
                style="@style/table"
                android:text="@string/scorea" />

            <TextView
                style="@style/table"
                android:text="@string/scorea" />

            <TextView
                style="@style/table"
                android:text="@string/scorea" />

            <TextView
                style="@style/table"
                android:text="@string/scorea" />

            <TextView
                style="@style/table"
                android:text="@string/teamb" />

            <TextView
                android:id="@+id/scoreb"
                style="@style/table"
                android:text="@string/scoreb" />

            <TextView
                style="@style/table"
                android:text="@string/scoreb" />

            <TextView
                style="@style/table"
                android:text="@string/scoreb" />

            <TextView
                style="@style/table"
                android:text="@string/scoreb" />

            <TextView
                style="@style/table"
                android:text="@string/scoreb" />

            <TextView
                style="@style/table"
                android:text="@string/scoreb" />

            <TextView
                style="@style/table"
                android:text="@string/scoreb" />

            <TextView
                style="@style/table"
                android:text="@string/scoreb" />

            <TextView
                style="@style/table"
                android:text="@string/scoreb" />

            <TextView
                style="@style/table"
                android:text="@string/scoreb" />

            <TextView
                style="@style/table"
                android:text="@string/scoreb" />
        </GridLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <Button
                style="@style/margin1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:onClick="results"
                android:text="@string/fixRes" />

            <Button
                style="@style/margin1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:onClick="reset"
                android:text="@string/reset" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>